# opencv5sharp

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHECKSUMS.sha256  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Dockerfile  LICENSE  LICENSE_FFMPEG.txt  NOTICE  OpenCV5Sharp.slnx  README.md  README_GPU.md  SECURITY.md  THIRD-PARTY-NOTICES.txt  build.ps1  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  deploy-docs.yml  pr-check.yml  release.yml
docs/: SIGNING.md  cleanup_pass2.ps1  cleanup_pass3.ps1  cleanup_refs.ps1  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/guide/: advanced-features.md  api-reference.md  getting-started.md  mobile-deployment.md  samples.md
samples/: README.md
samples/OpenCV5Sharp.Samples.AspNetCore.Cpu/: Program.cs
samples/OpenCV5Sharp.Samples.AspNetCore.Gpu/: OpenCV5Sharp.Samples.AspNetCore.Gpu.csproj  Program.cs
samples/OpenCV5Sharp.Samples.Blazor.Cpu/: App.razor  OpenCV5Sharp.Samples.Blazor.Cpu.csproj  Program.cs
samples/OpenCV5Sharp.Samples.Blazor.Gpu/: GpuInferenceService.cs  Program.cs
samples/OpenCV5Sharp.Samples.Console.Cpu/: OpenCV5Sharp.Samples.Console.Cpu.csproj  Program.cs
samples/OpenCV5Sharp.Samples.Console.Gpu/: OpenCV5Sharp.Samples.Console.Gpu.csproj  Program.cs
samples/OpenCV5Sharp.Samples.Maui.Cpu/: MauiProgram.cs  OpenCV5Sharp.Samples.Maui.Cpu.csproj
samples/OpenCV5Sharp.Samples.Maui.Gpu/: MauiProgram.cs  (+1 more)
scripts/: VerifyChecksums.ps1  cleanup_nupkg.ps1
src/OpenCV5Sharp.Native/: CMakeLists.txt  build.bat  compile.ps1  opencv5sharp_native.cpp  opencv5sharp_native.h
tests/: coverlet.runsettings
(+97 files in other folders)
